--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "ejs": "^2.6.1"
   }
 }
