--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node_modules/.bin/webpack-dev-server",
-    "build": "npx webpack --mode production"
+    "dev": "webpack-dev-server --mode development --config ./webpack.dev.config.js",
+    "build": "npx webpack --mode production --config ./webpack.base.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,16 +18,24 @@
   "author": "xujian",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^8.6.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "ejs-loader": "^0.3.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "mini-css-extract-plugin": "^0.4.1",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.5",
+    "postcss-url": "^7.3.2",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -37,7 +45,5 @@
     "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.4"
   },
-  "dependencies": {
-    "ejs": "^2.6.1"
-  }
+  "dependencies": {}
 }
