--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
+    "ejs": "^2.6.1",
     "ejs-loader": "^0.3.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
