--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.4.1",
+    "postcss": "^6.0.23",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
     "postcss-url": "^7.3.2",
