--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode development --config ./webpack.dev.config.js",
-    "build": "npx webpack --mode production --config ./webpack.base.config.js"
+    "build": "npx webpack --mode production --config ./webpack.base.config.js",
+    "start": "node ./server.js"
   },
   "repository": {
     "type": "git",
@@ -29,10 +30,12 @@
     "css-loader": "^0.28.11",
     "ejs": "^2.6.1",
     "ejs-loader": "^0.3.1",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-alpha",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.1",
     "postcss": "^6.0.23",
     "postcss-import": "^11.1.0",
@@ -46,7 +49,8 @@
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-hot-middleware": "^2.22.2"
   },
   "dependencies": {}
 }
