--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --mode development --config ./webpack.dev.config.js",
     "build": "npx webpack --mode production --config ./webpack.base.config.js",
-    "start": "node ./server.js"
+    "start": "cross-env NODE_ENV=dev node ./server.js",
+    "start2": "cross-env NODE_ENV=dev supervisor -w / -e ./server.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.2.0",
     "css-hot-loader": "^1.3.9",
     "css-loader": "^0.28.11",
     "ejs": "^2.6.1",
